# pinote

./: README.md  README.zh-CN.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  deps-update.yml  release.yml
.husky/: pre-commit
src/: App.tsx  BootstrapApp.tsx  ContextMenuApp.tsx  SettingsApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  locale.rs  main.rs  shortcut.rs  tray.rs  window.rs  window_state.rs
src/components/: Editor.tsx  ShortcutInput.tsx  TitleBar.tsx
src/components/settings/: AboutSection.tsx  AppearanceSection.tsx  HistorySection.tsx  SettingsNumberInput.tsx  SettingsSidebar.tsx  SettingsSwitch.tsx  ShortcutsSection.tsx  UpdateDialog.tsx  WindowSection.tsx  shared.ts
src/hooks/: useAutoSave.ts  useNoteExternalSync.ts  useNoteWindowActions.ts  useNoteWindowMouseInteractions.ts  useNoteWindowState.ts  useSettings.ts  useTheme.ts  useWindowControl.ts
src/i18n/: LocaleSync.tsx  index.ts  locale.ts
src/i18n/resources/en-US/: common.ts  contextMenu.ts  note.ts  settings.ts
src/i18n/resources/zh-CN/: common.ts  contextMenu.ts  note.ts  settings.ts
src/lib/: api.ts  contextMenuApi.ts  diagnostics.ts  logger.ts  logging.ts  noteHistory.ts  notes.ts  settingsEvents.ts  shortcuts.ts  updater.ts  windowApi.ts  windowManager.ts  windowStateCache.ts
src/stores/: settings.ts  settingsStore.ts
src/styles/: App.css
